--- a/serde_rustler/Cargo.toml
+++ b/serde_rustler/Cargo.toml
@@ -16,7 +16,13 @@ crate-type = ["rlib"]
 
 [dependencies]
 lazy_static = "1.4.0"
+
+# errors
 thiserror = "1.0"
-rustler = "0.23"
-rustler_codegen = "0.23"
+
+# rustler
+rustler = "0.29.1"
+rustler_codegen = "0.29.1"
+
+# serde
 serde = "1.0"
