--- a/serde_rustler_tests/native/serde_rustler_tests/Cargo.toml
+++ b/serde_rustler_tests/native/serde_rustler_tests/Cargo.toml
@@ -12,8 +12,12 @@ crate-type = ["cdylib"]
 
 [dependencies]
 lazy_static = "1.0"
-rustler = "0.23.0"
-rustler_codegen = "0.23.0"
+
+# rustler
+rustler = "0.29.1"
+rustler_codegen = "0.29.1"
+
+# serde
 serde = { version = "1.0", features = ["derive"] }
 serde_bytes = "0.11"
 serde_json = "1.0"
